Update TextInput.java